src/objects/WEBContactMessage__c.object
<CustomObject>
    <fields>
        <fullName>Address_City__c</fullName>
        <label>Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_County__c</fullName>
        <label>Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_PostCode__c</fullName>
        <label>Address Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Street__c</fullName>
        <label>Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>WEB Contact Messages</relationshipLabel>
        <relationshipName>WEB_Contact_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sent_To_Email__c</fullName>
        <label>Sent To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <picklist>
            <picklistValues>
                <fullName>Business Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friend Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friends Champion Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Enquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>WEB Contact Message</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <columns>Subject__c</columns>
        <columns>Date_Received__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <nameField>
        <displayFormat>WCM-{00000000}</displayFormat>
        <label>WEB Contact Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WEB Contact Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>